# nl_erpnext_rgs_mkb

./: .gitignore  CORRECTED_RGS_Classification.json  CORRECTED_custom_fields.json  CRITICAL_REALIGNMENT_PLAN.md  README.md  RGS_MKB_DESIGN_SPECIFICATION.md  convert_rgs_to_erpnext_coa.py  enhanced_rgs_mapping.py  import_rgs_erpnext_pattern.py  migration_patch.py  nl_rgs_chart_of_accounts.json  package.json  process_rgs_enhanced.py  pyproject.toml  setup.py
docs/: BUILD_CLEANUP_SUMMARY.md  COMPLETE_DOCUMENTATION.md  DEVELOPMENT_STATUS_REPORT.md  DOCKER_BUILD_GUIDE.md  ERPNEXT_TREE_LOADING_ANALYSIS.md  ERPNEXT_UI_NAVIGATION_ANALYSIS.md  FIXTURE_INSTALLATION_ARCHITECTURE.md  FRAPPE_DOCKER_RGS_ARCHITECTURE_DOCUMENTATION.md  QUICK_START.md  README.md  RGS_BUILD_OPTIMIZATION_STRATEGY.md  RGS_MKB_DESIGN_SPECIFICATION.md  TECHNICAL_DEEP_DIVE.md
nl_erpnext_rgs_mkb/: __init__.py  build_utils.py  hooks.py  modules.txt  utils.py
nl_erpnext_rgs_mkb/config/: desktop.py
nl_erpnext_rgs_mkb/dutch_rgs_mkb/: __init__.py
nl_erpnext_rgs_mkb/fixtures/: custom_field.json  rgs-definitions.json  rgs_classification.json  rgs_classification_corrected.json  rgs_selections.json.bak
nl_erpnext_rgs_mkb/nl_erpnext_rgs_mkb/: __init__.py  account_validation.py
nl_erpnext_rgs_mkb/nl_erpnext_rgs_mkb/doctype/rgs_classification/: rgs_classification.js  rgs_classification.json  rgs_classification.py
nl_erpnext_rgs_mkb/nl_erpnext_rgs_mkb/doctype/rgs_template/: rgs_template.js  rgs_template.json  rgs_template.py
nl_erpnext_rgs_mkb/public/css/: app.css
nl_erpnext_rgs_mkb/public/js/: index.js
(+4 files in other folders)
