# /tmp/nl_erpnext_rgs_mkb/pyproject.toml
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nl_erpnext_rgs_mkb"
authors = [{name = "Your Organization", email = "admin@fivi.eu"}]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = []

[project.urls]
Home = "https://github.com/erjeve/nl_erpnext_rgs_mkb"